--- a/src/main/resources/index.hbs
+++ b/src/main/resources/index.hbs
@@ -12,10 +12,10 @@
 <div class="container has-text-centered">
     <div class="columns">
         <div class="column m-4">
-            <a href="/">
+            <a href="/links-downloader">
                 <h1 class="title is-1 mb-5">Télécharger des liens</h1>
             </a>
-            <form method="post" action="/download">
+            <form method="post" action="links-downloader/download">
                 <label class="label" for="links">Liens</label>
                 <textarea class="textarea" id="links" name="links" placeholder="http://mon-super-film.com"
                           required></textarea>
